--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
           Advent Digi-Farm<span class="animate scroll" style="--i: 2"></span>
         </h3>
         <p>
-          Advent Innovations Limited Company is a woman owned company founded in
+          Advent Innovations Limited Company is a woman-owned company founded in
           2016 with the motivation of exploring the nano and micro frontiers of
           research leading to the development of novel and smart materials. Our
           goal is to transition to a sustainable future using smart materials
-          driven by artifical intelligence. In the short time, since the company
+          driven by artificial intelligence. In the short time, since the company
           was founded, Advent has recruited outstanding researchers as well as
           exceptional individuals with full expertise in business and
           commercialization...
@@ -139,8 +139,8 @@
                 <h3>Customized Image Dataset</h3>
                 <p>
                   Drone-based aerial imagery database establishment through
-                  autmoated waypoint and mapping algorithm. Datasets are updated
-                  for every seasons once/multiple times depending on specific
+                  automated waypoint and mapping algorithm. Datasets are updated
+                  for every season once/multiple times depending on specific
                   needs, to help acquire better crops through predictive
                   analytics.
                 </p>
@@ -154,15 +154,15 @@
                 <h3>Satellite and Weather Dataset</h3>
                 <p>
                   Satellite data and images are updated and obtained every 2-4
-                  days. Historical archieve satellite data available too.
+                  days. Historical archive satellite data is available too.
                   Statistical vegetation indices such as Normalized Difference
                   Vegetation Index (NDVI), Enhanced Vegetation Index (EVI),
                   National Resource Inventory (NRI), Disease Stress Water Index
-                  (DSWI), Normalized Difference Water Index (NDWI) are given for
-                  all possible vegetation area. Accumulated temperature,
-                  precipitation, soil temperature and moisture on different
+                  (DSWI), Normalized Difference Water Index (NDWI) is given for
+                  all possible vegetation areas. Accumulated temperature,
+                  precipitation, soil temperature, and moisture on different
                   depth are extracted from satellite data. Historical weather
-                  archieve and forecast are provided.
+                  archive and forecast are provided.
                 </p>
               </div>
             </div>
@@ -182,7 +182,7 @@
                 </div>
                 <h3>Data Analytics Dashboard</h3>
                 <p>
-                  Dashboard is a visual service that helps to monitor your field
+                  Dashboard is a visual service that helps monitor your field
                   states over the year. The service allows to operate with
                   satellite imagery and weather data along with advanced machine
                   learning technologies.
@@ -194,18 +194,18 @@
                 <div class="service-cat">
                   <i class="bx bx-category"></i> Category
                 </div>
-                <h3>AI and ML based Predicitve Algortihm</h3>
+                <h3>AI and ML based Predictive Algorithm</h3>
                 <p>
-                  AI/ML based predictive algorithm reports include overviews of
+                  AI/ML-based predictive algorithm reports include overviews of
                   the conditions of the observed crops, distribution on the map
                   of the type of crops and their condition, vegetation
                   statistics, etc. Data can be stratified and aggregated by any
                   criterion, for instance, by crops, by regions, by years. Based
-                  on large amount of processing satellite and climate data, we
+                  on large amounts of processing satellite and climate data, we
                   provide analytical reports and detailed datasets for crop
                   monitoring, Recognising field boundaries, Vegetation indices
-                  statistics by each recognised field and Climate data for
-                  regions and particular field.
+                  statistics by each recognized field and Climate data for
+                  regions and particular fields.
                 </p>
               </div>
             </div>
