--- a/AgroInformatics.html
+++ b/AgroInformatics.html
@@ -63,7 +63,7 @@
               <span class="material-icons">
                 <ion-icon name="server-outline"></ion-icon>
               </span>
-              <span class="title">Digi-farm Database</span>
+              <span class="title">Digi-Farm Database</span>
             </a>
           </li>
           <li>
