--- a/accountSettings.html
+++ b/accountSettings.html
@@ -66,7 +66,7 @@
                 <span class="material-icons">
                   <ion-icon name="server-outline"></ion-icon>
                 </span>
-                <span class="title">Digi-farm Database</span>
+                <span class="title">Digi-Farm Database</span>
               </a>
             </li>
             <li>
